Revert "Added user, login api"
This reverts commit 2f36cfcdae628c1d04d26b4c222591ebbba92c53.
