# server/api/controllers/login.js
@@ -1,20 +1,0 @@
-"use strict";
-
-let loginService = require("../../services/login");
-let commonService = require("../../services/common");
-
-module.exports = {
-  tokenGet: tokenGet,
-};
-
-function tokenGet(req, res, next) {
-  loginService.authenticateAsync(req.body.email, req.body.password)
-    .then((user) => {
-      loginService.generateTokenAsync(user)
-        .then((token) => {
-          res.json(commonService.resJson('Authenticated successfully', token));
-        })
-        .catch(next);
-    })
-    .catch(next);
-}
