# server/api/controllers/users.js
@@ -4,24 +4,23 @@ let usersService = require('../../services/users');
 let commonService = require('../../services/common');
 
 module.exports = {
-  userCreate: userCreate,
-  getUsers: getUsers,
-	getUser: getUser,
-	updateUser: updateUser
+  getUsersNoSql: getUsersNoSql,
+	getUsersSql: getUsersSql,
+	getUser: getUser
 };
 
-function userCreate(req, res, next) {
-  usersService.createUserAsync(req.body)
-    .then((result) => {
-      res.json(commonService.resJson('User added successfully.', result));
-    })
-    .catch(next);
+function getUsersNoSql(req, res, next) {
+  usersService.getUsersNoSqlAsync()
+		.then((result) => {
+			res.json(commonService.resJson('Users fetched successfully With Sequelize.', result));
+		})
+		.catch(next);
 }
 
-function getUsers(req, res, next) {
-  usersService.getUsersAsync()
+function getUsersSql(req, res, next) {
+  usersService.getUsersSqlAsync()
 		.then((result) => {
-			res.json(commonService.resJson('Users fetched successfully.', result));
+			res.json(commonService.resJson('Users fetched successfully With Sequelize and SQL Query.', result));
 		})
 		.catch(next);
 }
@@ -31,15 +30,6 @@ function getUser(req, res, next) {
   usersService.getUserAsync(userId)
     .then((result) => {
       res.json(commonService.resJson('User fetched successfully.', result));
-    })
-    .catch(next);
-}
-
-function updateUser(req, res, next) {
-	let userId = req.swagger.params.userId.value;
-  usersService.updateUserAsync(userId, req.body)
-    .then((result) => {
-      res.json(commonService.resJson('User updated successfully.', result));
     })
     .catch(next);
 }
